Added new changes

--- a/3Dconvolve/makefile
+++ b/3Dconvolve/makefile
@@ -2,7 +2,7 @@ CC=gcc
 CFLAGS=-c -Wall
 LDFLAGS:=-lm
 
-NVCC        = nvcc
+NVCC        = /usr/local/cuda/bin/nvcc
 NVCC_FLAGS  = -g
 LD_FLAGS    = -lcudart
 EXE         = ppm
@@ -17,8 +17,5 @@ ppm.o: ppm.cu ppmKernel.cu
 parallel: $(OBJ)
 	$(NVCC) $(OBJ) -o par_3D_conv $(LD_FLAGS)
 
-serial: ppm_3D_serial.c
-	$(CC) ppm_3D_serial.c -lm -o ser_3D_conv
-
 clean:
-	rm -rf *.o par_3D_conv ser_3D_conv ../outfiles/tmp*
+	rm -rf *.o par_3D_conv ../outfiles/tmp*
